bootstrap_theme/vivato/utils.scss
/* ... */
// intro - heading tag
.pd-intro-heading-sm {
    display: inline-block;
    border: 1px solid $primary;
    border-radius: 50em;
    color: $primary;
    padding: $pd-label-padding;
    text-transform: uppercase;
    font-size: $pd-font-ex-sm;
    letter-spacing: $pd-letter-spacing;
    font-weight: $pd-font-weight-medium;
}

.pd-intro-heading-sm.pd-inverted {
    border: 1px solid $white;
    color: $white;
}

.pd-sub-headline {
    color: $primary;
    font-size: $pd-font-md;
    font-weight: $pd-font-weight-light;
    line-height: $pd-line-height-ex-lg;
}

.pd-sub-headline.pd-inverted {
    color: $white;
}

.pd-icon-label {
    display: flex;
    flex-direction: row;
    text-decoration: none;
    justify-content: flex-start;
    align-items: center;
    margin-right: 10px;
    flex-wrap: wrap;

    p {
        color: $primary;
        letter-spacing: $pd-letter-spacing;
        margin-bottom: 0px;
        font-size: $pd-font-ex-sm;
        font-weight: $pd-font-weight-light;
        transition: color $pd-transition-speed ease;
    }

    svg {
        width: 14px;
        height: 14px;
        fill: $primary;
        transition: fill $pd-transition-speed ease;
    }

    &:hover {
        p {
            color: lighten($primary, 10%);
        }

        svg {
            fill: $secondary;
        }
    }
}

.pd-icon-label.pd-inverted {
    p {
        color: $white;
    }

    svg {
        fill: $white;
    }

    &:hover {
        p {
            color: darken($white, 10%);
        }

        svg {
            fill: darken($white, 10%);
        }
    }
}

// **************
// *** CARDS ****
// **************
.pd-card-icon {
    display: inline-flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border: 1px solid $secondary;
    border-radius: 50em;
    width: 70px;
    height: 70px;

    svg {
        width: 40px;
        height: 40px;
        fill: $secondary;
    }
}

.pd-card-icon.pd-inverted {
    border: 1px solid $white;

    svg {
        fill: $white;
    }
}

.pd-card-headline {
    color: $primary;
    font-weight: $pd-font-weight-heavy;
    font-size: $pd-font-lg;
    line-height: $pd-line-height-ex-lg;
}

.pd-card-headline.pd-inverted {
    color: $white;
}

.pd-card-body {
    color: $primary;
    font-weight: $pd-font-weight-light;
    line-height: $pd-line-height-lg;
    font-size: $pd-font-sm;
}

.pd-card-body.pd-inverted {
    color: $white;
}

// anchor
.pd-card-link {
    text-decoration: none;
    color: $primary;
    font-weight: $pd-font-weight-light;
    transition: color $pd-transition-speed;

    &:before {
        content: ">";
        margin-right: 8px;
    }

    &:hover {
        color: lighten($primary, 10%);
    }
}

.pd-card-link.pd-inverted {
    color: $white;

    &:hover {
        color: darken($white, 10%);
    }
}

.pd-card-bullet {
    color: $primary;
    font-weight: $pd-font-weight-light;
    margin-bottom: 10px;

    &:before {
        content: ">";
        margin-right: 8px;
    }
}

.pd-card-bullet.pd-inverted {
    color: $white;
}

// ******************
// *** END CARDS ****
// ******************
// **************
// *** BLOCKS ***
// **************
.pd-block-primary {
    position: relative;
    background: $primary;
    border-radius: $pd-border-radius-lg;
    color: $white;

    @media screen and (max-width: 575px) {
        padding: $pd-block-padding-ex-sm;
    }

    @media (min-width: 576px) {
        padding: $pd-block-padding-lg;
    }
}

.pd-block-transparent {
    border-radius: $pd-border-radius-lg;
    padding: $pd-block-padding-lg;
    color: $white;

    @media screen and (max-width: 575px) {
        padding: $pd-block-padding-ex-sm;
    }

    @media (min-width: 576px) {
        padding: $pd-block-padding-lg;
    }
}

.pd-block-dark {
    position: relative;
    border-radius: $pd-border-radius-sm;
    background: $pd-black-alpha;
    width: 100%;

    @media screen and (max-width: 575px) {
        padding: $pd-block-padding-ex-sm;
    }

    @media (min-width: 576px) {
        padding: $pd-block-padding-lg;
    }
}

// ******************
// *** END BLOCKS ***
// ******************
// *********************
// *** IMAGE EFFECTS ***
// *********************
.pd-special-img-outer {
    position: relative;
    overflow: hidden;
    border-radius: $pd-border-radius-lg;

    // @media screen and (max-width: 575px) {
    //     width: 240px;
    //     height: 320px;
    // }

    // @media (min-width: 576px) and (max-width: 991px) {
    //     width: 424px;
    //     height: 565px;
    // }

    // @media (min-width: 992px) and (max-width: 1199px) {
    //     width: 312px;
    //     height: 416px;
    // }

    // @media (min-width: 1200px) {
    //     width: 376px;
    //     height: 500px;
    // }


        @media screen and (max-width: 340px) {
            width: 280px;
            height: 373px;
        }

        @media (min-width: 341px) and (max-width: 575px) {
            width: 320px;
            height: 427px;
        }

        @media (min-width: 576px) and (max-width: 991px) {
            width: 424px;
            height: 565px;
        }

        @media (min-width: 992px) and (max-width: 1199px) {
            width: 312px;
            height: 416px;
        }

        @media (min-width: 1200px) {
            width: 376px;
            height: 500px;
        }


    .pd-special-img-play-icon {
        position: absolute;
        left: 50%;
        top: 50%;
        transform: translate(-50%, -50%);
        cursor: pointer;

        img,
        svg {
            width: 120px;
            height: 120px;
            transition: transform $pd-transition-speed ease;
        }

        &:hover {
            img,
            svg {
                transform: scale(1.1);
            }
        }
    }
}
/* ... */

